Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-32999

ERROR 138 instead of warning, and potential error masking

    XMLWordPrintable

Details

    Description

      INSTALL PLUGIN Spider SONAME 'ha_spider.so';
      CREATE TABLE t ENGINE=Spider COMMENT='WRAPPER "mysql"';
      

      Leads to, on base:

      11.3.0 126157061b4376496c034a809ea4943e863d1465 (Debug)

      11.3.0-dbg> INSTALL PLUGIN Spider SONAME 'ha_spider.so';
      Query OK, 0 rows affected, 1 warning (0.285 sec)
       
      11.3.0-dbg> CREATE TABLE ts1 ENGINE=Spider COMMENT='WRAPPER "mysql",TABLE "t1"';
      ERROR 1429 (HY000): Unable to connect to foreign data source: localhost
      

      Versus the patch:

      11.4.0 f93c20081a8a505ac502850ec02630f95673dfba (Optimized)

      11.4.0-opt> INSTALL PLUGIN Spider SONAME 'ha_spider.so';
      Query OK, 0 rows affected, 1 warning (0.284 sec)
       
      11.4.0-opt> CREATE TABLE ts1 ENGINE=Spider COMMENT='WRAPPER "mysql",TABLE "t1"';
      ERROR 138 (0A000): Spider table params in COMMENT or CONNECTION strings have been deprecated and will be removed in a future release. Please use table options instead.
      

      Two issues:
      1) It seems that other errors are masked in favor of ERROR 138
      2) The ERROR should have been a warning only

      Attachments

        Issue Links

          Activity

            People

              ycp Yuchen Pei
              Roel Roel Van de Paar
              Votes:
              0 Vote for this issue
              Watchers:
              3 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0d
                  0d
                  Logged:
                  Time Spent - 7h 37m
                  7h 37m

                  Git Integration

                    Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.