MDEV-32999 Spider: only warn of connection string deprecation when creating a table